# ROSassign2-g02

./: .gitignore  CMakeLists.txt  README.md  package.xml
devel/: #setup.bash#  .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/stdr_msgs/: AddCO2SourceRequest.h  AddCO2SourceResponse.h  AddRfidTagRequest.h  AddRfidTagResponse.h  AddSoundSourceRequest.h  AddSoundSourceResponse.h  AddThermalSourceRequest.h  AddThermalSourceResponse.h  CO2SensorMeasurementMsg.h  CO2SensorMsg.h  CO2Source.h  CO2SourceVector.h  DeleteCO2SourceRequest.h  DeleteCO2SourceResponse.h  DeleteRfidTagRequest.h  DeleteRfidTagResponse.h  DeleteRobotAction.h  DeleteRobotActionFeedback.h  DeleteRobotActionGoal.h  DeleteRobotActionResult.h  DeleteRobotFeedback.h  DeleteRobotGoal.h  DeleteRobotResult.h  DeleteSoundSourceRequest.h  DeleteSoundSourceResponse.h  DeleteThermalSourceRequest.h  DeleteThermalSourceResponse.h  FootprintMsg.h  KinematicMsg.h  LaserSensorMsg.h  LoadExternalMapRequest.h  LoadExternalMapResponse.h  LoadMapRequest.h  LoadMapResponse.h  MoveRobotRequest.h  MoveRobotResponse.h  Noise.h  RegisterGuiRequest.h  RegisterGuiResponse.h  RegisterRobotAction.h  (+29 more)
devel/lib/pkgconfig/: agitr.pc  reactive_robot.pc  stdr_gui.pc  stdr_launchers.pc  stdr_msgs.pc  stdr_parser.pc  stdr_resources.pc  stdr_robot.pc  stdr_samples.pc  stdr_server.pc
devel/lib/reactive_robot/: hello
devel/lib/stdr_gui/: stdr_gui_node
devel/lib/stdr_robot/: robot_handler
include/: robot_wall_following.h
src/: main.cpp  robot_wall_following.cpp  robot_wall_following.h
src/reactive_robot/: CMakeLists.txt
(+31 files in other folders)
